- distinct stocks from OTC

--- a/cron_fillup_stock_detail.ipynb
+++ b/cron_fillup_stock_detail.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,14 +64,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "symbol: MAHMF\n"
+      "symbol: BWNAF\n"
      ]
     }
    ],
@@ -79,14 +79,17 @@
     "db_stock = tbl_stock.find_one({'name': None})\n",
     "\n",
     "symbol = ''\n",
+    "is_otc = False\n",
     "if db_stock is not None:\n",
     "    symbol = db_stock['symbol']\n",
+    "    if 'is_otc' in db_stock:\n",
+    "        is_otc = db_stock['is_otc']\n",
     "    print('symbol: ' + symbol)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -104,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -116,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -126,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -174,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -200,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -208,7 +211,7 @@
     "    comment_num = get_random_number(MAX_COMMENT)\n",
     "    #generate random posts for each stock\n",
     "    fake_comments = post_request_gemini('Generate '+str(comment_num)+' random comments for this stock symbol ' + symbol +\" natually as human saying. Each setence should have 30 to 50 words length.\") #10 sec\n",
-    "    # print(fake_comments)\n",
+    "    print(fake_comments)\n",
     "    raw_comments = fake_comments['candidates'][0]['content']['parts'][0]['text']\n",
     "    #extract json structure\n",
     "    json_comments = extract_json(raw_comments)\n",
@@ -217,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -238,7 +241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -249,7 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -266,7 +269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -296,7 +299,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -325,16 +328,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "I've been keeping a close eye on MAHMF for a while now, and while the recent dip is concerning, I'm holding onto my shares.  The long-term potential in this sector seems promising, and I believe that with some patience, this stock could rebound and ultimately deliver strong returns. I'm not planning to sell anytime soon, personally.\n",
-      "Honestly, MAHMF's performance has been a bit of a rollercoaster lately.  The market volatility is affecting everything, but I'm trying to stay optimistic.  I've done some research into their recent developments and it seems like they're navigating some challenges but still showing potential for growth down the line. Time will tell, I guess.\n",
-      "Finish symbol MAHMF\n"
+      "{'error': {'code': 429, 'message': 'Resource has been exhausted (e.g. check quota).', 'status': 'RESOURCE_EXHAUSTED'}}\n"
+     ]
+    },
+    {
+     "ename": "KeyError",
+     "evalue": "'candidates'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[52], line 9\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m stock_detail \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m \u001b[38;5;129;01mand\u001b[39;00m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mname\u001b[39m\u001b[38;5;124m'\u001b[39m \u001b[38;5;129;01min\u001b[39;00m stock_detail:\n\u001b[1;32m      7\u001b[0m     \u001b[38;5;66;03m#generate and save comments (only for valid stock)\u001b[39;00m\n\u001b[1;32m      8\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m is_otc:\n\u001b[0;32m----> 9\u001b[0m         comment_list \u001b[38;5;241m=\u001b[39m \u001b[43mget_rand_comments\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     10\u001b[0m         \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mComment number: \u001b[39m\u001b[38;5;124m'\u001b[39m \u001b[38;5;241m+\u001b[39m \u001b[38;5;28mstr\u001b[39m(\u001b[38;5;28mlen\u001b[39m(comment_list)))\n\u001b[1;32m     11\u001b[0m         \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mlen\u001b[39m(comment_list) \u001b[38;5;241m>\u001b[39m \u001b[38;5;241m0\u001b[39m:\n\u001b[1;32m     12\u001b[0m             \u001b[38;5;66;03m#take each comment\u001b[39;00m\n",
+      "Cell \u001b[0;32mIn[46], line 6\u001b[0m, in \u001b[0;36mget_rand_comments\u001b[0;34m()\u001b[0m\n\u001b[1;32m      4\u001b[0m fake_comments \u001b[38;5;241m=\u001b[39m post_request_gemini(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mGenerate \u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;241m+\u001b[39m\u001b[38;5;28mstr\u001b[39m(comment_num)\u001b[38;5;241m+\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m random comments for this stock symbol \u001b[39m\u001b[38;5;124m'\u001b[39m \u001b[38;5;241m+\u001b[39m symbol \u001b[38;5;241m+\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m natually as human saying. Each setence should have 30 to 50 words length.\u001b[39m\u001b[38;5;124m\"\u001b[39m) \u001b[38;5;66;03m#10 sec\u001b[39;00m\n\u001b[1;32m      5\u001b[0m \u001b[38;5;28mprint\u001b[39m(fake_comments)\n\u001b[0;32m----> 6\u001b[0m raw_comments \u001b[38;5;241m=\u001b[39m \u001b[43mfake_comments\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mcandidates\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m]\u001b[49m[\u001b[38;5;241m0\u001b[39m][\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mcontent\u001b[39m\u001b[38;5;124m'\u001b[39m][\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mparts\u001b[39m\u001b[38;5;124m'\u001b[39m][\u001b[38;5;241m0\u001b[39m][\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mtext\u001b[39m\u001b[38;5;124m'\u001b[39m]\n\u001b[1;32m      7\u001b[0m \u001b[38;5;66;03m#extract json structure\u001b[39;00m\n\u001b[1;32m      8\u001b[0m json_comments \u001b[38;5;241m=\u001b[39m extract_json(raw_comments)\n",
+      "\u001b[0;31mKeyError\u001b[0m: 'candidates'"
      ]
     }
    ],
@@ -345,27 +358,28 @@
     "    stock_detail = custom_query(stock_detail_url)\n",
     "    #print(stock_detail)\n",
     "    if stock_detail is not None and 'name' in stock_detail:\n",
-    "        #generate and save comments\n",
-    "        comment_list = get_rand_comments()\n",
-    "        # print(comment_list)\n",
-    "        if len(comment_list) > 0:\n",
-    "            #take each comment\n",
-    "            for json_comment in comment_list:\n",
-    "                #save comment to db\n",
-    "                comment_detail = insert_comment(json_comment['comment'])\n",
-    "                reply_list = get_rand_relies(json_comment['comment'])\n",
-    "                #print(reply_list)\n",
-    "                if len(reply_list) > 0:\n",
-    "                    for str_reply in reply_list:\n",
-    "                        insert_reply(str_reply, comment_detail)\n",
+    "        #generate and save comments (only for valid stock)\n",
+    "        if is_otc:\n",
+    "            comment_list = get_rand_comments()\n",
+    "            print('Comment number: ' + str(len(comment_list)))\n",
+    "            if len(comment_list) > 0:\n",
+    "                #take each comment\n",
+    "                for json_comment in comment_list:\n",
+    "                    #save comment to db\n",
+    "                    comment_detail = insert_comment(json_comment['comment'])\n",
+    "                    reply_list = get_rand_relies(json_comment['comment'])\n",
+    "                    #print(reply_list)\n",
+    "                    if len(reply_list) > 0:\n",
+    "                        for str_reply in reply_list:\n",
+    "                            insert_reply(str_reply, comment_detail)\n",
     "        #update stock info to db\n",
-    "        tbl_stock.update_one({'symbol': symbol}, {'$set':{\n",
-    "                'name': stock_detail['name'],\n",
-    "                'industry': stock_detail['finnhubIndustry'],\n",
-    "                'ipo': stock_detail['ipo'],\n",
-    "                'cap': stock_detail['marketCapitalization'],\n",
-    "                'web': stock_detail['weburl']\n",
-    "            }})\n",
+    "        # tbl_stock.update_one({'symbol': symbol}, {'$set':{\n",
+    "        #         'name': stock_detail['name'],\n",
+    "        #         'industry': stock_detail['finnhubIndustry'],\n",
+    "        #         'ipo': stock_detail['ipo'],\n",
+    "        #         'cap': stock_detail['marketCapitalization'],\n",
+    "        #         'web': stock_detail['weburl']\n",
+    "        #     }})\n",
     "    else:\n",
     "        #somehow cannot get detail of this stock, mark it to process later\n",
     "        tbl_stock.update_one({'symbol': symbol}, {'$set':{\n",
