--- a/cron_fillup_stock_detail.ipynb
+++ b/cron_fillup_stock_detail.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -119,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -129,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -177,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -203,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -211,7 +211,7 @@
     "    comment_num = get_random_number(MAX_COMMENT)\n",
     "    #generate random posts for each stock\n",
     "    fake_comments = post_request_gemini('Generate '+str(comment_num)+' random comments for this stock symbol ' + symbol +\" natually as human saying. Each setence should have 30 to 50 words length.\") #10 sec\n",
-    "    print(fake_comments)\n",
+    "    #print(fake_comments)\n",
     "    raw_comments = fake_comments['candidates'][0]['content']['parts'][0]['text']\n",
     "    #extract json structure\n",
     "    json_comments = extract_json(raw_comments)\n",
@@ -220,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -241,7 +241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -252,7 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -269,7 +269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -299,7 +299,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -328,26 +328,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'error': {'code': 429, 'message': 'Resource has been exhausted (e.g. check quota).', 'status': 'RESOURCE_EXHAUSTED'}}\n"
-     ]
-    },
-    {
-     "ename": "KeyError",
-     "evalue": "'candidates'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[52], line 9\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m stock_detail \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m \u001b[38;5;129;01mand\u001b[39;00m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mname\u001b[39m\u001b[38;5;124m'\u001b[39m \u001b[38;5;129;01min\u001b[39;00m stock_detail:\n\u001b[1;32m      7\u001b[0m     \u001b[38;5;66;03m#generate and save comments (only for valid stock)\u001b[39;00m\n\u001b[1;32m      8\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m is_otc:\n\u001b[0;32m----> 9\u001b[0m         comment_list \u001b[38;5;241m=\u001b[39m \u001b[43mget_rand_comments\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     10\u001b[0m         \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mComment number: \u001b[39m\u001b[38;5;124m'\u001b[39m \u001b[38;5;241m+\u001b[39m \u001b[38;5;28mstr\u001b[39m(\u001b[38;5;28mlen\u001b[39m(comment_list)))\n\u001b[1;32m     11\u001b[0m         \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mlen\u001b[39m(comment_list) \u001b[38;5;241m>\u001b[39m \u001b[38;5;241m0\u001b[39m:\n\u001b[1;32m     12\u001b[0m             \u001b[38;5;66;03m#take each comment\u001b[39;00m\n",
-      "Cell \u001b[0;32mIn[46], line 6\u001b[0m, in \u001b[0;36mget_rand_comments\u001b[0;34m()\u001b[0m\n\u001b[1;32m      4\u001b[0m fake_comments \u001b[38;5;241m=\u001b[39m post_request_gemini(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mGenerate \u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;241m+\u001b[39m\u001b[38;5;28mstr\u001b[39m(comment_num)\u001b[38;5;241m+\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m random comments for this stock symbol \u001b[39m\u001b[38;5;124m'\u001b[39m \u001b[38;5;241m+\u001b[39m symbol \u001b[38;5;241m+\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m natually as human saying. Each setence should have 30 to 50 words length.\u001b[39m\u001b[38;5;124m\"\u001b[39m) \u001b[38;5;66;03m#10 sec\u001b[39;00m\n\u001b[1;32m      5\u001b[0m \u001b[38;5;28mprint\u001b[39m(fake_comments)\n\u001b[0;32m----> 6\u001b[0m raw_comments \u001b[38;5;241m=\u001b[39m \u001b[43mfake_comments\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mcandidates\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m]\u001b[49m[\u001b[38;5;241m0\u001b[39m][\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mcontent\u001b[39m\u001b[38;5;124m'\u001b[39m][\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mparts\u001b[39m\u001b[38;5;124m'\u001b[39m][\u001b[38;5;241m0\u001b[39m][\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mtext\u001b[39m\u001b[38;5;124m'\u001b[39m]\n\u001b[1;32m      7\u001b[0m \u001b[38;5;66;03m#extract json structure\u001b[39;00m\n\u001b[1;32m      8\u001b[0m json_comments \u001b[38;5;241m=\u001b[39m extract_json(raw_comments)\n",
-      "\u001b[0;31mKeyError\u001b[0m: 'candidates'"
+      "{'candidates': [{'content': {'parts': [{'text': '```json\\n{\\n  \"comments\": [\\n    {\\n      \"id\": 1,\\n      \"comment\": \"I\\'ve been keeping a close eye on BWNAF for a while now, and I\\'m intrigued by its recent performance.  The potential for growth seems significant, especially considering the current market trends, but of course, there\\'s always inherent risk involved in any investment, so I\\'m proceeding with caution and doing my due diligence before making any significant moves.\"\\n    },\\n    {\\n      \"id\": 2,\\n      \"comment\": \"BWNAF is definitely on my watchlist.  The company\\'s innovative approach to their sector is promising, but I\\'m a little hesitant given the volatility we\\'ve seen lately.  I\\'m waiting to see some more consistent positive indicators before I\\'d even think about adding it to my portfolio.  It\\'s all about calculated risks, right?\"\\n    },\\n    {\\n      \"id\": 3,\\n      \"comment\": \"Heard some mixed things about BWNAF. Some people are raving about its potential, while others are expressing concerns about its long-term viability.  I\\'m trying to carefully analyze the available information before forming my own opinion; it\\'s important to not get swept up in the hype or the negativity.\"\\n    },\\n    {\\n      \"id\": 4,\\n      \"comment\": \"I\\'m personally quite bullish on BWNAF.  Their recent strategic partnerships and product launches have really impressed me. I believe this could be a great long-term investment,  but remember,  past performance is not indicative of future results.  Always do your research!\"\\n    },\\n    {\\n      \"id\": 5,\\n      \"comment\": \"BWNAF has caught my attention, primarily due to its strong financial statements and positive growth projections. However, I need to delve deeper into their competitive landscape and overall market saturation before considering any investment.  It\\'s a complex situation.\"\\n    },\\n    {\\n      \"id\": 6,\\n      \"comment\": \"Considering BWNAF for diversification within my portfolio. It offers a unique investment opportunity,  but I\\'m waiting for a better entry point. The current price seems a bit high for my risk tolerance at the moment; I’m more of a value investor.\"\\n    },\\n    {\\n      \"id\": 7,\\n      \"comment\": \"I\\'m a bit skeptical about BWNAF.  While the initial numbers looked promising, I\\'m concerned about the sustainability of their growth.  I think further investigation is necessary to assess the true potential and risks associated with this stock before I even consider buying it.\"\\n    }\\n  ]\\n}\\n```\\n'}], 'role': 'model'}, 'finishReason': 'STOP', 'avgLogprobs': -0.4310204547384511}], 'usageMetadata': {'promptTokenCount': 42, 'candidatesTokenCount': 575, 'totalTokenCount': 617, 'promptTokensDetails': [{'modality': 'TEXT', 'tokenCount': 42}], 'candidatesTokensDetails': [{'modality': 'TEXT', 'tokenCount': 575}]}, 'modelVersion': 'gemini-1.5-flash'}\n",
+      "Comment number: 7\n",
+      "Finish symbol BWNAF\n"
      ]
     }
    ],
@@ -373,13 +363,13 @@
     "                        for str_reply in reply_list:\n",
     "                            insert_reply(str_reply, comment_detail)\n",
     "        #update stock info to db\n",
-    "        # tbl_stock.update_one({'symbol': symbol}, {'$set':{\n",
-    "        #         'name': stock_detail['name'],\n",
-    "        #         'industry': stock_detail['finnhubIndustry'],\n",
-    "        #         'ipo': stock_detail['ipo'],\n",
-    "        #         'cap': stock_detail['marketCapitalization'],\n",
-    "        #         'web': stock_detail['weburl']\n",
-    "        #     }})\n",
+    "        tbl_stock.update_one({'symbol': symbol}, {'$set':{\n",
+    "                'name': stock_detail['name'],\n",
+    "                'industry': stock_detail['finnhubIndustry'],\n",
+    "                'ipo': stock_detail['ipo'],\n",
+    "                'cap': stock_detail['marketCapitalization'],\n",
+    "                'web': stock_detail['weburl']\n",
+    "            }})\n",
     "    else:\n",
     "        #somehow cannot get detail of this stock, mark it to process later\n",
     "        tbl_stock.update_one({'symbol': symbol}, {'$set':{\n",
